<TableLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/ButtonsTable"
    android:layout_width="fill_parent"
    android:layout_height="wrap_content"
    android:orientation="horizontal" >

    <TableRow
        android:id="@+id/tr1"
        android:layout_width="wrap_content"
        android:layout_height="80dp"
        android:gravity="center" >

        <Button
            android:id="@+id/btnPS"
            android:layout_width="60dp"
            android:layout_height="60dp"
            android:background="@drawable/ps_button"
            android:gravity="center"
            android:onClick="openPS" />

        <Button
            android:id="@+id/btnPO"
            android:layout_width="60dp"
            android:layout_height="60dp"
            android:background="@drawable/po_button"
            android:gravity="center"
            android:onClick="openPO" />
    </TableRow>

    <TableRow
        android:layout_width="wrap_content"
        android:layout_height="80dp"
        android:gravity="center" 
        android:layout_marginTop="7dp">

        <TextView
            android:id="@+id/tv1"
            android:layout_width="60dp"
            android:layout_height="wrap_content"
            android:text="@string/ps"
            android:textSize="12sp" 
            android:gravity="center"
            />

        <TextView
            android:id="@+id/tv2"
            android:layout_width="60dp"
            android:layout_height="wrap_content"
            android:text="@string/po"
            android:textSize="12sp" 
            android:gravity="center"/>
    </TableRow>
    
    
    <TableRow
        android:id="@+id/tr2"
        android:layout_width="wrap_content"
        android:layout_height="80dp"
        android:gravity="center" >

        <Button
            android:id="@+id/btnHGP"
            android:layout_width="60dp"
            android:layout_height="60dp"
            android:background="@drawable/hgp_button"
            android:gravity="center"
            android:onClick="openHGP" />

        <Button
            android:id="@+id/btnPN"
            android:layout_width="60dp"
            android:layout_height="60dp"
            android:background="@drawable/pn_button"
            android:gravity="center"
            android:onClick="openPN" />

    </TableRow>

    <TableRow
        android:layout_width="wrap_content"
        android:layout_height="80dp"
        android:gravity="center" 
        android:layout_marginTop="7dp">

        <TextView
            android:id="@+id/tv3"
            android:layout_width="60dp"
            android:layout_height="wrap_content"
            android:text="@string/hgp"
            android:textSize="12sp" 
            android:gravity="center"/>

        <TextView
            android:id="@+id/tv4"
            android:layout_width="60dp"
            android:layout_height="wrap_content"
            android:text="@string/pn"
            android:textSize="12sp" 
            android:gravity="center"/>
    </TableRow>
    
    
    
     <TableRow
         android:id="@+id/tr3"
        android:layout_width="wrap_content"
        android:layout_height="80dp"
        android:gravity="center">

        <Button
            android:id="@+id/btnCP"
            android:layout_width="60dp"
            android:layout_height="60dp"
            android:background="@drawable/cp_button"
            android:gravity="center"
            android:onClick="openCP" />

        <Button
            android:id="@+id/btnHDB"
            android:layout_width="60dp"
            android:layout_height="60dp"
            android:background="@drawable/hdb_button"
            android:gravity="center"
            android:onClick="openHDB" />

    </TableRow>

    <TableRow
        android:layout_width="wrap_content"
        android:layout_height="80dp"
        android:gravity="center" 
        android:layout_marginTop="7dp">

        <TextView
            android:id="@+id/tv5"
            android:layout_width="60dp"
            android:layout_height="wrap_content"
            android:text="@string/cp"
            android:textSize="12sp" 
            android:gravity="center"/>

        <TextView
            android:id="@+id/tv6"
            android:layout_width="60dp"
            android:layout_height="wrap_content"
            android:text="@string/hdb"
            android:textSize="12sp" 
            android:gravity="center"/>
    </TableRow>

</TableLayout>